# Health-Monitoring-Service

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
include/: Monitor.h
src/: Config.cpp  Monitor.cpp  main.cpp
